--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.2
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025-05-07
   Changes:
