--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
-Date: ????
+Date: 2025-05-07
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
