changelog and various

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.5
+Date: 2025-05-07
+  Changes:
+    - Internal function name chage (remove_value to remove_table_element_string):
+---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2025-05-07
   Changes:
